--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,29 @@
 /* Carousel */
-@import '/css/tools/carousel.css';
+@import 'tools/carousel.css';
 
 /* RibbonMenu */
-@import '/css/tools/ribbonmenu.css';
+@import 'tools/ribbonmenu.css';
 
 /* StepSlider */
-@import '/css/tools/stepslider.css';
+@import 'tools/stepslider.css';
 
 /* ProductCard */
-@import '/css/tools/productcard.css';
+@import 'tools/productcard.css';
 
 /* ProductsGrid */
-@import '/css/tools/productsgrid.css';
+@import 'tools/productsgrid.css';
 
 /* Modal */
-@import '/css/tools/modal.css';
+@import 'tools/modal.css';
 
 /* CartIcon */
-@import '/css/tools/carticon.css';
+@import 'tools/carticon.css';
 
 /* Cart */
-@import '/css/tools/cart.css';
+@import 'cart/cart.css';
 
 /* Filters */
-@import '/css/settings/filters.css';
+@import 'settings/filters.css';
 
 /* Footer */
-@import '/css/tools/footer.css';
+@import 'tools/footer.css';
