--- a/css/settings/preloader.css
+++ b/css/settings/preloader.css
@@ -14,7 +14,7 @@
 }
   
 .loader_inner {
-    background-image: url("/img/preloader/preloader.gif");
+    background-image: url("../../img/preloader/preloader.gif");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
